# nzboxide

./: Cargo.toml  README.md
.github/workflows/: rust.yml
fixtures/: base.nzb
src/: main.rs  parser.rs
