[package]
name = "nzboxide"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
quick-xml = { version = "0.29.0", features = ["serialize"] }
serde = { version = "1.0.173", features = ["derive"] }
