[package]
name = "nzboxide"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/miguelpduarte/nzboxide"

[lints.rust]

unsafe_code = "forbid"

[lints.clippy]

# pedantic = "warn"

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
quick-xml = { version = "0.29.0", features = ["serialize"] }
serde = { version = "1.0.173", features = ["derive"] }
